# Blender-MCP

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TODO.md  alembic.ini  pyproject.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
blender_controller/: blender_runtime.py  bootstrap.py  config.py  host.py  logger.py  mock_runtime.py  protocol.py  runtime.py  smoke.py
examples/: README.md  claude-desktop.blender.json  claude-desktop.mock.json  official-node-honden-repair.mjs
generated_schemas/: asset-spec.schema.json  common-request.schema.json  common-result.schema.json  export-record.schema.json  operation-log.schema.json  part-spec.schema.json  qa-report.schema.json  scene-spec.schema.json  world-spec.schema.json
mcp_server/: bridge.py  config.py  logger.py  logging_utils.py  main.py  persistence.py  policy.py  schema_tools.py  serialization.py  server.py  utils.py  workspace.py
mcp_server/models/: __init__.py  common.py  domain.py
mcp_server/tools/: aaa_orchestrator.py  aaa_workflows.py  advanced_helpers.py  animation_rigging.py  asset_io.py  asset_library.py  batch_ops.py  camera.py  collections.py  game_prep.py  geometry.py  geometry_nodes.py  helpers.py  history.py  lighting.py  material.py  model_generation.py  modifiers.py  object.py  parts.py  production_pipeline.py  (+11 more)
presets/: lighting.py  materials.py  rendering.py
scripts/: validate_commit_msg.py
specs/: ASSUMPTIONS.md  GLOSSARY.md  README.md
tests/: package_smoke.py  test_aaa_orchestrator_contracts.py  test_aaa_workflows_contracts.py  test_acceptance_stdio.py  test_animation_rigging_contracts.py  test_asset_io_contracts.py  test_asset_library_contracts.py  test_batch_geometry_nodes_contracts.py  test_bridge.py  test_bridge_attach.py  test_bridge_host.py  test_camera_lighting_game_prep_contracts.py  test_collection_contracts.py  test_config.py  test_core_tool_families.py  test_geometry_nodes_contracts.py  test_history_contracts.py  test_http_security.py  test_load_soak.py  test_model_generation_contracts.py  test_models_and_schemas.py  test_modifier_contracts.py  test_object_geometry_render_semantics.py  test_part_contracts.py  test_persistence.py  test_production_pipeline_contracts.py  test_qa_contracts.py  test_render_material_contracts.py  test_repair_contracts.py  test_scene_contracts.py  test_server_ping.py  test_texture_uv_contracts.py  test_workflow_pack_contracts.py  test_workspace_safety.py  test_world_contracts.py
(+99 files in other folders)
